# dinox

./: README.md  cpu_environment.yml  gpu_environment.yml  pyproject.toml
applications/nonlinear_diffusion_reaction/: generate_data.py  ndr_model.py
applications/nonlinear_diffusion_reaction/reduced_bases/: compute_bases_and_projectors.py
applications/poisson/: generate_data.py  poisson_model.py
applications/poisson/dino_training/: cm_weighted_training.py  dino_training.py  dino_training_new_scratchwork.py  l2_training.py  reduce_data.py
applications/poisson/reduced_bases/: compute_bases_and_projectors.py
dinojax/: __init__.py  data_utilities.py  dino.py  embed_data.py  embed_data_in_subspaces.py  metrics.py  neuralOperators.py  train.py
dinox/: __init__.py  __main__.py  _data_utilities.py  data_loading.py  data_utilities.py  dino.py  embed_data.py  equinox_nn_factories.py  losses.py  metrics.py  nn_factories.py  train.py  training_utils.py
examples/: 1_generate_data.py  2_compute_encoder_bases_and_cobases.py  3_train_dinos.py  compute_bases_and_projectors.py  compute_encoder_bases_and_cobases.py  generate_data.py  load_one_of_4_BIPs.py  load_one_of_4_BIPs_README.md  randomly_pick_4_BIPs.py
examples/hyperelasticity/: generate_data.py  hyperelasticity_model.py  model.py
examples/nonlinear_diffusion_reaction/: compute_bases_and_projectors.py  generate_data.py  model.py  ndr_model.py
examples/nonlinear_diffusion_reaction/data/reduced_bases/: compute_bases_and_projectors.py
examples/poisson/: generate_data.py  model.py  poisson_model.py
hippylib_pde_examples/hyperelasticity/: model.py
hippylib_pde_examples/nonlinear_diffusion_reaction/: model.py
old/: 1_generate_data.py  1_generate_data_gradient_loaded_data_problems.py  1_generate_data_timing.py  1_reduce_data_and_plot_true_data.ipynb  3_train_dinos_and_plot.py  4_TrainingPlots.ipynb  compress_data.py  compute_encoder_bases_and_cobases.py  gpu_environment.yml  load_one_of_4_BIPs.py  load_one_of_4_BIPs_README.md  randomly_pick_4_BIPs.py  run_many_independent_data_generations.py  training_results.pkl
old/figures/: run_mcmc.py  targets.npy  visual_tool.py
old/helmholtz/: model.py
old/poisson/: model.py
src/dinox/: __init__.py  data_generating.py  data_loading.py  equinox_nn_factories.py  losses.py  training_utils.py
