[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[project]
name = "dinox"
version = "0.4.0"
description = "Derivative Informed Neural Operators in JAX and Equinox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Joshua Chen", email = "joshuawchen@icloud.com" },
  { name = "Michael Brennan", email = "mcbrenn@mit.edu" },
  { name = "Thomas O'Leary-Roseberry", email = "tom.olearyroseberry@utexas.edu" }
]
dependencies = [
    "jax",
    "jaxlib",
    "jaxtyping",
    "bayesflux>=0.7.4",
    "equinox",
    "hickle>=5.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-pyproject"
]
cupy = [
    "cupy-cuda117>=10.0.0,<11.0.0",  # If your system uses CUDA 11.7; for others use e.g., cupy-cuda115, cupy-cuda118, etc.
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[project.urls]
Homepage = "https://github.com/joshuawchen/BayesFlux"
Repository = "https://github.com/joshuawchen/BayesFlux"

[tool.uv_build]
src_dir = "src"

