[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[project]
name = "dinox"
version = "0.5.5"
description = "Derivative Informed Neural Operators in JAX and Equinox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Joshua Chen", email = "joshuawchen@icloud.com" },
  { name = "Michael Brennan", email = "mcbrenn@mit.edu" },
  { name = "Lianghao Cao", email = "lianghao@caltech.edu" },
  { name = "Thomas O'Leary-Roseberry", email = "tom.olearyroseberry@utexas.edu" }
]
dependencies = [
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "jaxtyping",
    "optax>=0.2.3",
    "bayesflux[hippylib]>=0.8",
    "equinox",
    "hickle>=5.0.3",
    "pydantic"
]

[project.optional-dependencies]
cupy = [
    "cupy-cuda12x",
    "nvidia-curand-cu12"
]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-pyproject"
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[project.urls]
Homepage = "https://github.com/dinoSciML/dinox"
Repository = "https://github.com/dinoSciML/dinox"

[tool.uv_build]
src_dir = "src"